--- a/package.json
+++ b/package.json
@@ -9,9 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "antd": "^5.4.4",
+    "axios": "^1.3.6",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
+    "formidable": "^2.1.1",
+    "formidable-serverless": "^1.1.1",
+    "jsdom": "^21.1.1",
+    "lodash": "^4.17.21",
+    "mongoose": "^7.0.4",
+    "multer": "^1.4.5-lts.1",
     "next": "13.3.1",
+    "next-connect": "^0.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
