--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-config-next": "13.3.1",
     "formidable": "^2.1.1",
     "formidable-serverless": "^1.1.1",
+    "js-cookie": "^3.0.4",
     "jsdom": "^21.1.1",
     "lodash": "^4.17.21",
     "mongoose": "^7.0.4",
