--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/static-style-extract": "^1.0.1",
     "antd": "^5.4.4",
     "axios": "^1.3.6",
     "eslint": "8.39.0",
@@ -17,11 +18,14 @@
     "formidable-serverless": "^1.1.1",
     "js-cookie": "^3.0.4",
     "jsdom": "^21.1.1",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
     "lodash": "^4.17.21",
     "mongoose": "^7.0.4",
     "multer": "^1.4.5-lts.1",
     "next": "13.3.1",
     "next-connect": "^0.13.0",
+    "next-plugin-antd-less": "^1.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
