--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "eslint-config-next": "13.3.1",
     "formidable": "^2.1.1",
     "formidable-serverless": "^1.1.1",
+    "iconv-lite": "^0.6.3",
     "js-cookie": "^3.0.4",
+    "jschardet": "^3.0.0",
     "jsdom": "^21.1.1",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
